--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.12.0",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
@@ -79,7 +81,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/stripe": "^8.0.416",
-    "daisyui": "^4.12.14",
+    "daisyui": "^4.12.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
