Customer Header & Sidebar Changed

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hookform/resolvers": "^3.9.1",
     "@material-tailwind/react": "^2.1.10",
+    "@nextui-org/date-picker": "^2.3.7",
+    "@nextui-org/react": "^2.6.8",
     "@radix-ui/react-select": "^2.1.2",
     "@react-google-maps/api": "^2.20.3",
     "@stripe/react-stripe-js": "^3.0.0",
@@ -34,6 +36,7 @@
     "@syncfusion/ej2-schedule": "27.2.5",
     "@syncfusion/ej2-splitbuttons": "27.2.2",
     "@types/react-icons": "^2.2.7",
+    "@welcome-ui/date-picker": "^6.6.0",
     "apexcharts": "^4.1.0",
     "awesome-typescript-loader": "3.4.1",
     "axios": "^1.7.7",
@@ -55,7 +58,6 @@
     "react-big-calendar": "^1.16.3",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^7.5.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
