--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hookform/resolvers": "^3.9.1",
     "@material-tailwind/react": "^2.1.10",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/date-picker": "^2.3.7",
     "@nextui-org/react": "^2.6.8",
     "@radix-ui/react-select": "^2.1.2",
@@ -53,6 +54,7 @@
     "mapbox-gl": "^3.8.0",
     "moment": "^2.30.1",
     "next": "^15.0.3",
+    "next-auth": "^4.24.11",
     "normalize.css": "^8.0.1",
     "react-apexcharts": "^1.7.0",
     "react-big-calendar": "^1.16.3",
@@ -63,6 +65,7 @@
     "react-leaflet": "^4.2.1",
     "react-loading-icons": "^1.1.0",
     "react-loading-indicators": "^1.0.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-map-gl": "^7.1.7",
     "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
@@ -87,6 +90,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
