--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-loading-icons": "^1.1.0",
