--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "next-auth": "^4.24.11",
     "normalize.css": "^8.0.1",
     "react-apexcharts": "^1.7.0",
-    "react-big-calendar": "^1.16.3",
+    "react-big-calendar": "^1.17.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-hook-form": "^7.53.2",
@@ -85,6 +85,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.0",
     "@types/react-dom": "^18",
     "@types/stripe": "^8.0.416",
     "daisyui": "^4.12.20",
