--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^18.0.3",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hookform/resolvers": "^3.9.1",
     "@material-tailwind/react": "^2.1.10",
@@ -41,6 +42,7 @@
     "apexcharts": "^4.2.0",
     "awesome-typescript-loader": "3.4.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
@@ -84,6 +86,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
