--- a/package.json
+++ b/package.json
@@ -54,13 +54,14 @@
     "js-cookie": "^3.0.5",
     "jsvectormap": "^1.6.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.469.0",
     "mapbox-gl": "^3.8.0",
     "moment": "^2.30.1",
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
     "normalize.css": "^8.0.1",
     "react-apexcharts": "^1.7.0",
-    "react-big-calendar": "^1.17.0",
+    "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^9.4.3",
